Removed project card overflow bug.

--- a/vusa.io/src/components/projectListItem/projectListItem.scss
+++ b/vusa.io/src/components/projectListItem/projectListItem.scss
@@ -1,9 +1,4 @@
 .projectListItem{
   background: inherit;
   color: inherit;
-
-
-  .card-size{
-    width: 100%;
-  }
 }
